finish strings section

--- a/scripts.ipynb
+++ b/scripts.ipynb
@@ -731,20 +731,510 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33f45e23",
+   "metadata": {},
+   "source": [
+    "### Find a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e04e2da6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counter(index):\n",
+    "    if index != -1:\n",
+    "        return 1\n",
+    "    else: \n",
+    "        return 0\n",
+    "        \n",
+    "def count_substring(string, sub_string):\n",
+    "    num_sub = 0\n",
+    "    index = string.find(sub_string) \n",
+    "    num_sub += counter(index)\n",
+    "    while index != -1:\n",
+    "        index += 1\n",
+    "        index = string.find(sub_string, index+1, len(string))\n",
+    "        num_sub += counter(index)\n",
+    "    return num_sub\n",
+    "\n",
+    "string = input().strip()\n",
+    "sub_string = input().strip()\n",
+    "count = count_substring(string, sub_string)\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e410c22",
+   "metadata": {},
+   "source": [
+    "### String Validators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f80291cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input()\n",
+    "print(any(i.isalnum() for i in s))\n",
+    "print(any(i.isalpha() for i in s))\n",
+    "print(any(i.isdigit() for i in s))\n",
+    "print(any(i.islower() for i in s))\n",
+    "print(any(i.isupper() for i in s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a46405a4",
+   "metadata": {},
+   "source": [
+    "### Text Alignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3000e5e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    H    \n",
+      "   HHH   \n",
+      "  HHHHH  \n",
+      " HHHHHHH \n",
+      "HHHHHHHHH\n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+      "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+      "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "                    HHHHHHHHH \n",
+      "                     HHHHHHH  \n",
+      "                      HHHHH   \n",
+      "                       HHH    \n",
+      "                        H     \n"
+     ]
+    }
+   ],
+   "source": [
+    "thickness = int(input()) #This must be an odd number\n",
+    "c = 'H'\n",
+    "\n",
+    "#Top Cone\n",
+    "for i in range(thickness):\n",
+    "    print((c*i).rjust(thickness-1)+c+(c*i).ljust(thickness-1))\n",
+    "\n",
+    "#Top Pillars\n",
+    "for i in range(thickness+1):\n",
+    "    print((c*thickness).center(thickness*2)+(c*thickness).center(thickness*6))\n",
+    "\n",
+    "#Middle Belt\n",
+    "for i in range((thickness+1)//2):\n",
+    "    print((c*thickness*5).center(thickness*6))    \n",
+    "\n",
+    "#Bottom Pillars\n",
+    "for i in range(thickness+1):\n",
+    "    print((c*thickness).center(thickness*2)+(c*thickness).center(thickness*6))    \n",
+    "\n",
+    "#Bottom Cone\n",
+    "for i in range(thickness):\n",
+    "    print(((c*(thickness-i-1)).rjust(thickness)+c+(c*(thickness-i-1)).ljust(thickness)).rjust(thickness*6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a0d7ae9",
+   "metadata": {},
+   "source": [
+    "### Text Wrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "29d11745",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCD\n",
+      "EFGH\n",
+      "IJKL\n",
+      "IMNO\n",
+      "QRST\n",
+      "UVWX\n",
+      "YZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "def wrap(string, max_width):\n",
+    "    wrappedText = textwrap.wrap(string, width=max_width)\n",
+    "    return \"\\n\".join(wrappedText)\n",
+    "\n",
+    "string, max_width = input(), int(input())\n",
+    "result = wrap(string, max_width)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cda71ff",
+   "metadata": {},
+   "source": [
+    "### Designer Door Mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "64872563",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------.|.------------\n",
+      "---------.|..|..|.---------\n",
+      "------.|..|..|..|..|.------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "----------WELCOME----------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "------.|..|..|..|..|.------\n",
+      "---------.|..|..|.---------\n",
+      "------------.|.------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, M = [int(i) for i in input().strip().split(\" \")]\n",
+    "line_dots_pattern = \".|.\"\n",
+    "times = 1\n",
+    "center_line_num = N // 2\n",
+    "for i in range(N):\n",
+    "    if i < center_line_num:\n",
+    "        print((line_dots_pattern*times).center(M,'-'))\n",
+    "        times += 2\n",
+    "    elif i == center_line_num:\n",
+    "        print(\"WELCOME\".center(M,'-'))\n",
+    "        times -= 2\n",
+    "    else:\n",
+    "        print((line_dots_pattern*times).center(M,'-'))\n",
+    "        times -= 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f76ad1b3",
+   "metadata": {},
+   "source": [
+    "### String Formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "657b1950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1     1     1     1\n",
+      "    2     2     2    10\n",
+      "    3     3     3    11\n",
+      "    4     4     4   100\n",
+      "    5     5     5   101\n",
+      "    6     6     6   110\n",
+      "    7     7     7   111\n",
+      "    8    10     8  1000\n",
+      "    9    11     9  1001\n",
+      "   10    12     A  1010\n",
+      "   11    13     B  1011\n",
+      "   12    14     C  1100\n",
+      "   13    15     D  1101\n",
+      "   14    16     E  1110\n",
+      "   15    17     F  1111\n",
+      "   16    20    10 10000\n",
+      "   17    21    11 10001\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_formatted(number):\n",
+    "    length = len(str(bin(number))) - 2\n",
+    "    for i in range(1, number+1):\n",
+    "        print(\n",
+    "            \"{0:d}\".format(i).rjust(length, ' '),\n",
+    "            \"{0:o}\".format(i).rjust(length, ' '),\n",
+    "            \"{0:X}\".format(i).rjust(length, ' '),\n",
+    "            \"{0:b}\".format(i).rjust(length, ' ')\n",
+    "        )\n",
+    "n = int(input())\n",
+    "print_formatted(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daefcf29",
+   "metadata": {},
+   "source": [
+    "### Alphabet Rangoli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "11b7472c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------e--------\n",
+      "------e-d-e------\n",
+      "----e-d-c-d-e----\n",
+      "--e-d-c-b-c-d-e--\n",
+      "e-d-c-b-a-b-c-d-e\n",
+      "--e-d-c-b-c-d-e--\n",
+      "----e-d-c-d-e----\n",
+      "------e-d-e------\n",
+      "--------e--------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_rangoli(size):\n",
+    "    temp = [chr(i) for i in range(ord('a'), ord('a')+size)]\n",
+    "    temp = temp[1:][::-1] + temp\n",
+    "    center = \"-\".join(temp)\n",
+    "    width = len(center)\n",
+    "    bottom = []\n",
+    "    for i in range(size - 1):\n",
+    "        bottom.append(\"-\".join(temp[:len(temp)//2-i]+temp[len(temp)//2 + 2 + i:]).center(width, \"-\"))\n",
+    "    result = [*reversed(bottom), center, *bottom]\n",
+    "    for i in result:\n",
+    "        print(i)\n",
+    "\n",
+    "n = int(input())\n",
+    "print_rangoli(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e8efdd6",
+   "metadata": {},
+   "source": [
+    "### Capitalize!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b6be2cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chris Alan'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "# Complete the solve function below.\n",
+    "def solve(s):\n",
+    "    return \" \".join([i.capitalize() for i in s.split(\" \")])\n",
+    "\n",
+    "s = input()\n",
+    "solve(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb9d914f",
+   "metadata": {},
+   "source": [
+    "### The Minion Game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c71b2d2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stuart 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def minion_game(string):\n",
+    "    kevin = 0\n",
+    "    l = len(string)\n",
+    "    for i in range(l):\n",
+    "        if string[i] in 'AEIOU':\n",
+    "            kevin += l - i\n",
+    "    \n",
+    "    stuart = int(l * (l+1) / 2) - kevin\n",
+    "    \n",
+    "    if stuart > kevin: \n",
+    "        print('Stuart', stuart)\n",
+    "        return\n",
+    "    \n",
+    "    if kevin > stuart:\n",
+    "        print('Kevin', kevin)\n",
+    "        return\n",
+    "\n",
+    "    print('Draw')\n",
+    "\n",
+    "s = input()\n",
+    "minion_game(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d834b9b0",
+   "metadata": {},
+   "source": [
+    "### Merge the Tools!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "efdad650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AB\n",
+      "CA\n",
+      "AD\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge_the_tools(string, k):\n",
+    "    counter = 0\n",
+    "    subsets = []\n",
+    "    temp = []\n",
+    "    for i in string:\n",
+    "        counter += 1\n",
+    "        if i not in temp:\n",
+    "            temp.append(i)\n",
+    "        if counter == k:\n",
+    "            subsets.append(\"\".join(temp))\n",
+    "            temp = []\n",
+    "            counter = 0\n",
+    "    for s in subsets:\n",
+    "        print(s)\n",
+    "\n",
+    "string, k = input(), int(input())\n",
+    "merge_the_tools(string, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98bc3a6b",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d701986-f775-4b04-bdd0-b86d79f86313",
+   "id": "ec586987",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "609de18f",
+   "id": "37503cc5",
    "metadata": {},
-   "source": [
-    "stop point"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e356828",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1fadd5c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c8c0af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
