finished sets section

--- a/scripts.ipynb
+++ b/scripts.ipynb
@@ -1198,43 +1198,452 @@
    "cell_type": "markdown",
    "id": "98bc3a6b",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Sets\n",
+    "### Introduction to Sets"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ec586987",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "169.375\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average(array):\n",
+    "    array = set(array)\n",
+    "    return sum(array)/len(array)\n",
+    "\n",
+    "n = int(input())\n",
+    "arr = list(map(int, input().split()))\n",
+    "result = average(arr)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "37503cc5",
    "metadata": {},
-   "source": []
+   "source": [
+    "### No Idea!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8e356828",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = [int(i) for i in input().strip().split(\" \")]\n",
+    "arr = [int(i) for i in input().strip().split(\" \")]\n",
+    "A = set([int(i) for i in input().strip().split(\" \")])\n",
+    "B = set([int(i) for i in input().strip().split(\" \")])\n",
+    "\n",
+    "happiness = 0\n",
+    "for i in arr:\n",
+    "    if i in A:\n",
+    "        happiness += 1\n",
+    "    elif i in B:\n",
+    "        happiness -= 1\n",
+    "\n",
+    "print(happiness)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d1fadd5c",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Symmetric Difference"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f0c8c0af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "9\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = int(input())\n",
+    "m_set = {int(i) for i in input().split(\" \")}\n",
+    "n = int(input())\n",
+    "n_set = {int(i) for i in input().split(\" \")}\n",
+    "\n",
+    "for i in sorted(m_set.symmetric_difference(n_set)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58ccffe3",
+   "metadata": {},
+   "source": [
+    "### Set .add()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d9ecf60f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "stamps = set([input() for i in range(n)])\n",
+    "print(len(stamps))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3f81187",
+   "metadata": {},
+   "source": [
+    "### Set .discard(), .remove() & .pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "11b3eba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "s = set(map(int, input().split()))\n",
+    "num_commands = int(input())\n",
+    "\n",
+    "commands = {\n",
+    "    \"remove\": s.remove,\n",
+    "    \"discard\": s.discard,\n",
+    "    \"pop\": s.pop\n",
+    "}\n",
+    "\n",
+    "for _ in range(num_commands):\n",
+    "    command = [i for i in input().strip().split(\" \")]\n",
+    "    args = command[1:]\n",
+    "    if args:\n",
+    "        commands[command[0]](*[int(i) for i in args])\n",
+    "    else:\n",
+    "        commands[command[0]]()\n",
+    "\n",
+    "print(sum(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91d3b19b",
+   "metadata": {},
+   "source": [
+    "### Set .union() Operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "642b91af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input()) \n",
+    "n_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "b = int(input()) \n",
+    "b_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "\n",
+    "print(len(n_set.union(b_set)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3e9122d",
+   "metadata": {},
+   "source": [
+    "### Set .intersection() Operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "37a04d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input()) \n",
+    "n_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "b = int(input()) \n",
+    "b_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "\n",
+    "print(len(n_set.intersection(b_set)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50f84cea",
+   "metadata": {},
+   "source": [
+    "### Set .difference() Operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5a4f1e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input()) \n",
+    "n_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "b = int(input()) \n",
+    "b_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "\n",
+    "print(len(n_set.difference(b_set)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55259df9",
+   "metadata": {},
+   "source": [
+    "### Set .symmetric_difference() Operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b693e577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input()) \n",
+    "n_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "b = int(input()) \n",
+    "b_set = set([int(i) for i in input().strip().split(\" \")])\n",
+    "\n",
+    "print(len(n_set.symmetric_difference(b_set)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7763e83",
+   "metadata": {},
+   "source": [
+    "### Set Mutations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "053a6f33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n"
+     ]
+    }
+   ],
+   "source": [
+    "len_A = int(input())\n",
+    "A = set([int(i) for i in input().strip().split()])\n",
+    "\n",
+    "N = int(input())\n",
+    "for i in range(N):\n",
+    "    current_command = [k for k in input().strip().split(\" \")]\n",
+    "    otherSet = set([int(j) for j in input().strip().split(\" \")])\n",
+    "    if current_command[0] == \"intersection_update\": A.intersection_update(otherSet)\n",
+    "    if current_command[0] == \"update\": A.update(otherSet)\n",
+    "    if current_command[0] == \"symmetric_difference_update\": A.symmetric_difference_update(otherSet)\n",
+    "    if current_command[0] == \"difference_update\": A.difference_update(otherSet)\n",
+    "\n",
+    "print(sum(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c39a7682",
+   "metadata": {},
+   "source": [
+    "### The Captain's Room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fc2a72a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "K = int(input())\n",
+    "rooms = [int(i) for i in input().strip().split(\" \")]\n",
+    "groups = {}\n",
+    "#print(len(rooms)//K)\n",
+    "for room in rooms:\n",
+    "    if room not in groups:\n",
+    "        groups[room] = 1\n",
+    "    else:\n",
+    "        groups[room] += 1\n",
+    "for k, v in groups.items():\n",
+    "    if v == 1:\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38204fa7",
+   "metadata": {},
+   "source": [
+    "### Check Subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "30a3c434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "T = int(input())\n",
+    "for i in range(T):\n",
+    "    len_A = int(input())\n",
+    "    A = set([int(j) for j in input().strip().split(\" \")])\n",
+    "    len_B = int(input())\n",
+    "    B = set([int(j) for j in input().strip().split(\" \")])\n",
+    "    print(A.issubset(B))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b97ec81",
+   "metadata": {},
+   "source": [
+    "### Check Strict Superset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c75126e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = set([int(i) for i in input().strip().split(\" \")])\n",
+    "n = int(input())\n",
+    "otherSets = []\n",
+    "for i in range(n):\n",
+    "    otherSets.append([int(i) for i in input().strip().split(\" \")])\n",
+    "\n",
+    "cheks = []\n",
+    "for i in otherSets:\n",
+    "    if A.issuperset(set(i)):\n",
+    "        cheks.append(True)\n",
+    "    else:\n",
+    "        cheks.append(False)\n",
+    "\n",
+    "print(sum(cheks)==len(cheks))"
+   ]
   }
  ],
  "metadata": {
